--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "date-fns": "^2.11.1",
+    "flowy-engine": "^0.1.2",
     "gray-matter": "^4.0.2",
     "next": "^11.0.0",
     "react": "17.0.2",
